# fox2.0

./: .gitignore  README.md  b.bat  package.json
backend/: .gitignore  CMakeLists.txt  README.md
backend/include/OpenEXR/: ImfAttribute.h  OpenEXRConfig.h
backend/include/absl/synchronization/internal/: pthread_waiter.h
backend/include/imagekit/: imagekit.hpp  imagekit_signature.hpp
backend/include/openjpeg-2.5/: openjpeg.h
backend/include/vips/: version.h
backend/proto/: social.proto
backend/sql/: 001_new.sql
backend/src/: app.h  main.cpp
backend/src/cache/: cache.h
backend/src/codec/: codec.cpp  codec.h
backend/src/command/: command.h
backend/src/crypto/: cryptbaby.cpp  cryptbaby.h
backend/src/db/: supabase.cpp  supabase.h
backend/src/jwt/: validator.cpp  validator.h
backend/src/libs/: redisx.h
backend/src/libs/miniocpp/: client.cc  credentials.cc  utils.cc
backend/src/middlewares/: authMiddle.cpp  authMiddle.h  ratelimit.cpp  ratelimit.h
backend/src/server/: http_server.h  server.cpp  server.h
backend/src/utils/: dotenv.h  logger.cpp  logger.h  sanitize.cpp  sanitize.h
backend/src/worker/: worker.h
deploy/: Dockerfile.server  docker-compose.yml  envoy.yaml
frontend/: README.md  index.html  package.json  pnpm-lock.yaml  quasar.config.ts
frontend/.mimocode/: .cron-lock
frontend/src/: App.vue
frontend/src/components/: CreatePost.vue  NavBar.vue  SidePanel.vue
frontend/src/components/auth/: LoginForm.vue  RegisterForm.vue
frontend/src/components/post/: PosT.vue  PosTSection.vue
frontend/src/components/ui/: Avatar.vue  BuTTon.vue  DropDown.vue  FiLeUpload.vue  InpUt.vue  UserCard.vue  VideoPlayer.vue  index.ts
frontend/src/composables/: errors.ts  sanitize.ts  useAuth.ts  useImageCdn.ts  useProfileData.ts  useSocialClient.ts  validators.ts
frontend/src/config/: config.ts
frontend/src/css/: app.scss
frontend/src/layouts/: MainLayout.vue
frontend/src/pages/index/: (index).vue  @[handle].vue  [...path].vue
frontend/src/proto/: .gitignore  social.client.ts  social.ts
frontend/src/router/: typed-router.d.ts
frontend/src/stores/: post-store.ts
frontend/src/types/: post.type.ts  social.ts
frontend/src/utils/: testMidia.ts
